syntax = "proto3";
import "common/loan.proto";
import "common/transaction.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "LoansMicroservice";

package LoansMicroservice;

service Loans {
  rpc BatchRepayInstalments (BatchRepayInstalmentsRequest) returns (google.protobuf.Empty);
  rpc Get (GetLoansRequest) returns (GetLoansResponse);
  rpc GetByPayments (GetLoansRequest) returns (GetLoansResponse);
  rpc GetByAccounts (GetLoansRequest) returns (GetLoansResponse);
  rpc GetTransactions (GetTransactionsRequest) returns (GetTransactionsResult);
  rpc Setup(SetupRequest) returns (google.protobuf.Empty);
  rpc SetupAppend(SetupRequest) returns (google.protobuf.Empty);
}

message BatchRepayInstalmentsRequest {
  string flowId = 1;
  repeated string ids = 2;
}

message GetLoansRequest {
  string flowId = 1;
  repeated string ids = 2;
}

message GetLoansResponse {
  repeated Loan loans = 1;
}

message GetTransactionsRequest {
  string flowId = 1;
  repeated string ids = 2;
  google.protobuf.Timestamp timestampFrom = 3;
  google.protobuf.Timestamp timestampTo = 4;
}

message GetTransactionsResult {
  repeated Transaction transactions = 1;
}

message SetupRequest {
  repeated Loan loans = 1;
}